# fiap-mlet-challenge-fase-1

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  docker.yml
data/mlflow/: churn_experiments.db
deploy/: README.md  helmfile.yaml
deploy/helm-chart/: .helmignore  Chart.yaml  values.yaml
deploy/helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/terraform/: .gitignore  README.md  alb.tf  backend.hcl.example  ecs.tf  iam.tf  locals.tf  network.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/scripts/: bootstrap_backend.py
docs/: ARCHITECTURE_DEPLOY.md  CODE_GUIDELINES.md  CONTRIBUTING.md  DEPLOYMENT.md  MODEL_CARD.md  MONITORING.md
notebooks/: eda.ipynb  eda_fixed.ipynb  eda_fixed_mlflow.ipynb  eda_teste.ipynb  mlflow.db  modeling.ipynb  models-comparison.ipynb  models-simpler.ipynb  models-temp.ipynb  models.ipynb  utils.py
src/: INSTRUCTION.md  config.py  main.py
src/api/: dependencies.py  routes.py  schemas.py
src/application/: business_metrics.py  data_schemas.py  pipeline.py  predictor.py  preprocessing.py  transformers.py
src/infrastructure/: mlflow_loader.py
tests/: conftest.py  test_health_endpoint.py  test_predict_endpoint.py
tests/application/: test_business_metrics.py  test_data_schemas.py  test_pipeline.py  test_predictor.py  test_preprocessing.py  test_transformers.py
tests/e2e/: __init__.py  httpie_app.py  test_httpie_api.py
tests/infrastructure/: test_mlflow_loader.py
tests/integration/: test_mlflow_loader.py
