[project]
name = "fiap-mlet-challenge-fase-1"
version = "0.1.0"
description = "Churn prediction API serving the MLP final model registered in MLflow."
readme = "README.md"
requires-python = ">=3.13,<3.14"

# Produção - usado em src/ (API runtime)
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn>=0.23.0",
    "starlette>=0.27.0",
    "mlflow-skinny>=3.10.1",
    "torch>=2.10.0",
    "pandas>=2.3.3",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
# EDA, modelagem e qualidade — não vai pra imagem Docker
dev = [
    "ty==0.0.31",
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.26.0",
    "ruff>=0.0.0",
    "setuptools==82.0.1",
    "mlflow==3.10.1",
    "jupyter==1.1.1",
    "pyarrow==23.0.1",
    "dagshub==0.6.9",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "imbalanced-learn>=0.12.0",
    "xgboost==3.2.0",
    "scikit-posthocs==0.12.0",
    "httpie>=3.2.4",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services (DagsHub, network); deselect by default",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["notebooks", ".venv", "data", "models", "htmlcov"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",  # line-length: handled by formatter
    "B008",  # FastAPI's Depends() in defaults is the documented pattern
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/__init__.py", "src/*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
